change naming convention for API responses